...
import SwiftUIX

struct TopicAlertView: View {
    @EnvironmentObject private var repoFactory: PECSRepoFactory
    //@State var selectedTopic: PECSRepo?
    @Binding var isPresented: Bool
    var title: String
    var exclude: [PECSRepo] = []
    var onSelectTopic: (PECSRepo)->()
    
    
    private let gridItem = GridItem(.flexible())
    private let columns = [GridItem(.adaptive(minimum: 100))]
...
        }, background: { mfPopoverBackground})
    }}


struct TopicListView_Previews: PreviewProvider {
    static var previews: some View {
        //TopicSelectionView()
        Text("TO DO")
    }
}

