...
                        }, secondaryButton: .cancel() {
                            self.settingsViewModel.showAlertForDeleteDiagnosticLogs = false
                            self.settingsViewModel.alertTypeForDeleteDiagnosticsLogs = .none
                        })
                    }
                    else {
                        return Alert(title: Text("Logs Deleted"), message: Text("Diagnostic logs successfully deleted"), dismissButton: .default(Text("OK")) {
                            self.settingsViewModel.showAlertForDeleteDiagnosticLogs = false
                            self.settingsViewModel.alertTypeForDeleteDiagnosticsLogs = .none
                        })
                    }
                }
                
...
