...
typealias PageLayout = PageLayoutType

typealias A12 = AccessibilityIdentifiers

struct AccessibilityIdentifiers {
    struct MainMenu {
        static var selectPhotoButton = "MainMenu.selectPhotoButton"
        static var clearSelectionsButton = "MainMenu.clearSelectionsButton"
        static var changeSelectionsButton = "MainMenu.changeSelectionsButton"
        static var selectLayoutButton = "MainMenu.selectLayoutButton"
        static var selectTitlesButton = "MainMenu.selectTitlesButton"
        static var previewAndPrintButton = "MainMenu.previewAndPrintButton"
        static var settingsButton = "MainMenu.settingsButton"
...
